# NDK

Lsn8/gradle/wrapper/: gradle-wrapper.properties
Test/app/: build.gradle
Test/app/src/androidTest/java/tina/com/test/: ExampleInstrumentedTest.java
Test/app/src/main/: AndroidManifest.xml
Test/app/src/main/cpp/: native-lib.cpp
Test/app/src/main/java/tina/com/test/: MainActivity.java
Test/app/src/test/java/tina/com/test/: ExampleUnitTest.java
Test/gradle/wrapper/: gradle-wrapper.properties
TinaPlayer/app/: CMakeLists.txt  build.gradle
TinaPlayer/app/src/main/: AndroidManifest.xml
TinaPlayer/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JavaCallHelper.cpp  TinaFFmpeg.cpp  TinaFFmpeg.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
TinaPlayer/app/src/main/java/tina/com/player/: MainActivity.java  PlayActivity.java  TinaPlayer.java
TinaPlayer/app/src/main/res/layout/: activity_main.xml
lsn1/: CMakeLists.txt  main.cpp
lsn10/app/: build.gradle
lsn10/app/src/androidTest/java/tina/com/lsn10/: ExampleInstrumentedTest.java
lsn10/app/src/main/: AndroidManifest.xml
lsn10/app/src/main/java/tina/com/lsn10/: MainActivity.java
lsn10/app/src/main/res/values/: strings.xml
lsn10/app/src/test/java/tina/com/lsn10/: ExampleUnitTest.java
lsn10/gradle/wrapper/: gradle-wrapper.properties
lsn2/: CMakeLists.txt  lsn.h  main.cpp
lsn3/: CMakeLists.txt  a.c  a.h  lsn.cpp  lsn.h  main.cpp  mysprintf.h
lsn4/: CMakeLists.txt  Student.cpp  Student.h  lsn4.cpp  lsn4.h  main.cpp
lsn5/: CMakeLists.txt  lsn5.cpp  lsn5.h
lsn6/: CMakeLists.txt  Ptr.h  SafeQueue.h  main.cpp
lsn7/: CMakeLists.txt  main.cpp
lsn9/app/: CMakeLists.txt  build.gradle
lsn9/app/src/androidTest/java/tina/com/myapplication/: ExampleInstrumentedTest.java
lsn9/app/src/main/: AndroidManifest.xml
lsn9/app/src/main/cpp/: native-lib.cpp
lsn9/app/src/main/java/tina/com/myapplication/: MainActivity.java
lsn9/app/src/test/java/tina/com/myapplication/: ExampleUnitTest.java
lsn9/gradle/wrapper/: gradle-wrapper.properties
lsn9_example_mk/app/: build.gradle
lsn9_example_mk/app/src/androidTest/java/com/dongnao/lsn9_example_mk/: ExampleInstrumentedTest.java
lsn9_example_mk/app/src/main/: AndroidManifest.xml
lsn9_example_mk/app/src/main/cpp/: Android.mk
lsn9_example_mk/app/src/main/res/values/: strings.xml
lsn9_example_mk/gradle/wrapper/: gradle-wrapper.properties
lsn9_mk/app/: build.gradle
lsn9_mk/app/src/main/: AndroidManifest.xml
lsn9_mk/app/src/main/cpp/: native_lib.c
lsn9_mk/app/src/main/res/values/: strings.xml
lsn9_mk/gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
